PI-91 - Main navigation add button - Fix add button overflow bug - Make main nav tablet friendly

--- a/styles/scss/blocks/_sidenav.scss
+++ b/styles/scss/blocks/_sidenav.scss
@@ -1,6 +1,6 @@
 .sidenav {
     // Width must by same as logo width + its padding
-    width: 189.406px;
+    width: 190px;
 
     > .md-button {
         width: 100%;
@@ -73,3 +73,36 @@
         }
     }
 }
+
+// Responsive
+// xs
+@media all and (max-width: 599px) {
+
+    .sidenav {
+        // Width must by same as logo width + its padding
+        width: 52px;
+    }
+}
+// sm
+@media all and (min-width: 600px) and (max-width: 959px) {
+
+    .sidenav {
+        // Width must by same as logo width + its padding
+        width: 52px;
+    }
+}
+// md
+@media all and (min-width: 960px) and (max-width: 1279px) {}
+// lg
+@media all and (min-width: 1280px) and (max-width: 1919px) {}
+// xl
+@media all and (min-width: 1920px) {}
+// GTs
+// gt xs
+@media all and (min-width: 600px) {}
+// gt sm
+@media all and (min-width: 960px) {}
+// gt md
+@media all and (min-width: 1280px) {}
+// gt lg
+@media all and (min-width: 1920px) {}
